plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ssu'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot 기본 구성
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // DB
    runtimeOnly 'com.h2database:h2'
    implementation 'mysql:mysql-connector-java:8.0.33'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // LangChain4j
    implementation "dev.langchain4j:langchain4j:0.32.0"
    implementation "dev.langchain4j:langchain4j-open-ai:0.32.0"
    implementation "dev.langchain4j:langchain4j-chroma:0.32.0"

    // JSON 변환용
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // 기타 (크롤링)
    implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
    implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'

}

tasks.named('test') {
    useJUnitPlatform()
}





//plugins {
//    id 'java'
//    //id 'org.springframework.boot' version '3.5.7'
//    id 'org.springframework.boot' version '3.2.6'
//    id 'io.spring.dependency-management' version '1.1.7'
//}
//
//group = 'com.ssu'
//version = '0.0.1-SNAPSHOT'
//description = 'Demo project for Spring Boot'
//
//java {
//    toolchain {
//        languageVersion = JavaLanguageVersion.of(17)
//    }
//}
//
//configurations {
//    compileOnly {
//        extendsFrom annotationProcessor
//    }
//}
//
//repositories {
//    mavenCentral()
//    maven { url 'https://repo.spring.io/milestone' }
//    //maven {url 'https://repo.spring.io/snapshot'}
//}
//
//dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.springframework.boot:spring-boot-starter-webflux'
//
//    compileOnly 'org.projectlombok:lombok'
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
//    annotationProcessor 'org.projectlombok:lombok'
//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//    runtimeOnly 'com.h2database:h2'
//
//    implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
//    implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
//
//    // ✅ Spring AI stable (for OpenAI API)
//    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M4")
//    implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter"
//    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//}
//
//tasks.named('test') {
//    useJUnitPlatform()
//}